# PDFtoPPTX

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
For Mac/PPTXtoPDF.app/Contents/: Info.plist
files/: ~$test.pptx
src/: PPTXtoPDF.py  main.py
