[tool.poetry]
name = "pdftopptx"
version = "0.1.0"
description = ""
authors = ["naoya-matsuno <naoya.matsuno.r1@dc.tohoku.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
python-pptx = "^0.6.21"
tkinterdnd2 = "^0.3.0"
pyinstaller = "^5.6.2"
fitz = "^0.0.1.dev2"
pymupdf = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
